Dummy_Package_for_scratch_org/main/default/objects/Setup_Wizard_Steps__c/Setup_Wizard_Steps__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Setup Wizard Steps</label>
</CustomObject>