Dummy_Package_for_scratch_org/main/default/objects/Setup_Wizard_Steps__c/fields/Diagram_Last_Action__c.field-meta.xml
<CustomField>
    <fullName>Diagram_Last_Action__c</fullName>
    <label>Diagram Last Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>