Dummy_Package_for_scratch_org/main/default/objects/Setup_Wizard_Steps__c/fields/Git_Snapshot_Id__c.field-meta.xml
<CustomField>
    <fullName>Git_Snapshot_Id__c</fullName>
    <label>Git Snapshot Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>