Dummy_Package_for_scratch_org/main/default/objects/Setup_Wizard_Steps__c/fields/Last_Step__c.field-meta.xml
<CustomField>
    <fullName>Last_Step__c</fullName>
    <label>Last Step</label>
    <length>50</length>
    <type>Text</type>
</CustomField>