Dummy_Package_for_scratch_org/main/default/objects/Setup_Wizard_Steps__c/fields/Pipeline_Id__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Id__c</fullName>
    <label>Pipeline Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>