Dummy_Package_for_scratch_org/main/default/objects/Setup_Wizard_Steps__c/fields/Wizard_Last_Action__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Last_Action__c</fullName>
    <label>Wizard Last Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>